# podman-hpc

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  exec-wait.cpp  podman-hpc.spec  pyproject.toml  pytest.ini  rpmsrcprep.sh  setup.cfg  setup.py
.github/actions/build-podman-hpc/: README.md  action.yml  entrypoint.sh
.github/actions/build-python/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/actions/build-rpm/: README.md  action.yml  entrypoint.sh
.github/workflows/: github-actions-demo.yml  github-actions-rpm-build.yml  pytest.yml  release-py-rpm.yml  release.yml  scorecard.yml
docs/: diagrams.md
etc/: 01-cvmfs.conf  01-nccl.conf  02-mpich.conf  config.toml  nersc-plug.yaml  podman_hpc.yaml
etc/modules.d/: cfs.yaml  cuda-mpich.yaml  cvmfs.yaml  exec-wait.yaml  gpu.yaml  home.yaml  jupyter.yaml  mpich.yaml  nccl.yaml  openmpi-pmi2.yaml  openmpi-pmix.yaml  openmpi.yaml  pmi2.yaml  pmix.yaml  scratch.yaml
extra/hook-debug/: README.md  hook-debug.sh
extra/squash/: Dockerfile  Makefile  README.md  mksquashfs-static.spec  mksquashfs.static
extra/squashfuse/: README.md  squashfuse.spec.example
extra/subxid/: README.md
extra/subxid/helm/: Chart.yaml  values.yaml
extra/subxid/helm/templates/: subxid-pvc.yaml  subxid-service-deployment.yaml  subxid-web-deployment.yaml
extra/subxid/image/: Dockerfile  README.md
extra/subxid/image/subxid/: entrypoint.sh  generate_maps  index.html
extra/subxid/systemd/: subxid.service.j2  subxid.timer.j2
hooks.d/: 02-hook_tool.json
podman_hpc/: __init__.py  argparse_exit_on_error.py  click_passthrough.py  configure_hooks.py  foo.py  hook_tool.py  migrate2scratch.py  nsenter.py  old_podman_hpc.py  podman_hpc.py  siteconfig.py
test/: test_conf.yaml  test_config.py  test_hook_tool.py  test_migrate2scratch.py  test_podman_hpc.py  test_zz_hook_tool.py
test/mock_bin/: conmon  exec_help.txt  mock_podman  run_help.txt
test/modules.d/: 01-module.yaml  02-module.yaml
test/storage/overlay-layers/: layers.json
test/storage/overlay/l/: ZV7QWNQETS5AJXTGA6EY2FM2WE
tests/: bogus_image.json  test_hook_tool.py  test_migrate2scratch.py
tests/storage/overlay-images/: images.json
tests/storage/overlay/994393dc58e7931862558d06e46aa2bb17487044f670f310dffe1d24e4d1eec7/: link
tests/storage/overlay/l/: ZV7QWNQETS5AJXTGA6EY2FM2WE.squash.bk
