[build-system]
requires = [
  "setuptools>=40",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''
