[metadata]
name = podman-hpc
version = 1.0.0

[options]
packages = podman_hpc
install_requires = 
  toml
  pyyaml

[options.entry_points]
console_scripts =
    podman-hpc = podman_hpc.podman_hpc:main
    hook_tool = podman_hpc.hook_tool:main

[options.data_files]
    bin =
      bin/exec-wait
      bin/fuse-overlayfs-wrap
    etc/podman_hpc =
      etc/01-gpu.conf
      etc/01-mpich.conf
    etc/podman_hpc/modules.d =
      etc/modules.d/gpu.yaml
      etc/modules.d/mpich.yaml
    share/containers/oci/hooks.d = 
      hooks.d/02-hook_tool.json


