[metadata]
name = podman-hpc
version = 1.0.0

[options]
packages = podman_hpc
install_requires = 
  toml
  pyyaml
  click
scripts = 
  bin/fuse-overlayfs-wrap

[options.entry_points]
console_scripts =
    podman-hpc = podman_hpc.podman_hpc:main
    hook_tool = podman_hpc.hook_tool:main

[options.data_files]
    etc/podman_hpc =
      etc/01-gpu.conf
      etc/01-mpich.conf
    etc/podman_hpc/modules.d =
      etc/modules.d/gpu.yaml
      etc/modules.d/mpich.yaml
      etc/modules.d/exec-wait.yaml

