[metadata]
name = podman-hpc
version = attr: podman_hpc.podman_hpc.__version__


[options]
packages = podman_hpc
install_requires = 
  toml
  pyyaml
  click
scripts = 
  bin/fuse-overlayfs-wrap

[options.entry_points]
console_scripts =
    podman-hpc = podman_hpc.podman_hpc:main
    hook_tool = podman_hpc.hook_tool:main

[options.data_files]
    etc/podman_hpc =
      etc/01-gpu.conf
      etc/01-mpich.conf
      etc/01-nccl.conf
      etc/01-cvmfs.conf
      etc/podman_hpc.yaml
    etc/podman_hpc/modules.d =
      etc/modules.d/home.yaml
      etc/modules.d/scratch.yaml
      etc/modules.d/cfs.yaml
      etc/modules.d/jupyter.yaml
      etc/modules.d/gpu.yaml
      etc/modules.d/mpich.yaml
      etc/modules.d/cuda-mpich.yaml
      etc/modules.d/nccl.yaml
      etc/modules.d/cvmfs.yaml
      etc/modules.d/openmpi-pmi2.yaml
      etc/modules.d/openmpi-pmix.yaml

